# cheap-google-earth

./: GOALS.md  README.md  SOURCES.md  build.cmd  run.cmd  snippets.txt
dep/lib/: glad.c
include/: Constants.hpp  Shader.hpp  Sphere.hpp  Texture.hpp
include/glad/: glad.h
shaders/: fragment_shader.frag  vertex_shader.vert
src/: CMakeLists.txt  Shader.cpp  Shader.hpp  Sphere.cpp  Texture.cpp  main.cpp
src/shaders/: vertex_shader.vert
